--- a/v practical 4.html
+++ b/v practical 4.html
@@ -11,19 +11,19 @@ table, th, td {
 
 <table style="width:100%">
   <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
+    <th>Subject</th>
+    <th>Classroom</th>
+    <th>Teachers</th>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <td>Maths</td>
+    <td>E201</td>
+    <td>Puja</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+    <td>Physics</td>
+    <td>M212</td>
+    <td>Aryan</td>
   </tr>
 </table>
 
